group 'net.corpwar.keycast'
version '0.9-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile 'commons-io:commons-io:2.4'
    compile 'com.1stleg:jnativehook:2.0.2'
    compile 'com.intellij:forms_rt:7.0.3'

}

configurations.all {
    resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
}

//create a single Jar with all dependencies
task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Carpwar Keycast',
                'Implementation-Version': version,
                'Main-Class': 'net.corpwar.keycast.Keycast'
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
